--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %} 
 {% load static %} 
 {% block metadescription %} 
+
 {%endblock %} 
-{% block title %} HolinessSingles {% endblock %} 
+{% block title %} {{post.title}} {% endblock %} 
 {% block content%}
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,20 +13,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
-
-
       <div class="Outer container-md ">
-
-        
-      
-      
+   
       <div class="firstSectionDesktop border-bottom">
       <section class=" homePageFirstSection">
       <!--======================================================== FOR EACH ROW ======================================================== -->
-              
-      
-          
-             
+  
               <div class="homePageFirstSection2Outer">
               <div class="homePageFirstSection2">
                 <div class="homePageFirstSection2InnerOuter">
@@ -85,106 +78,104 @@
       
     
       
-      <div class="secondSectionDesktop ">
-      
-      
-      
-        <section class=" homePageFacebookSection">
-            <!--======================================================== FACEBOOK SECTION ======================================================== -->
-        <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
-            <div class="facebookSection">
-                <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
-            
-            
-                <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
-        
-                    <div class="homePageNewsLetterBackground">
-                        <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
-                        <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
-                        <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
-            
-            
-                    </div>
-            
-            
-                </section>
+<div class="secondSectionDesktop ">
+    <section class=" homePageFacebookSection pb-5">
+        <!--======================================================== FACEBOOK SECTION ======================================================== -->
+    <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
+        <div class="facebookSection">
+            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
+            <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
+                <div class="homePageNewsLetterBackground">
+                    <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
+                    <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
+                    <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
+                </div>
             </section>
-      
-      <!--======================================================== WHAT WE DO SECTION ======================================================== -->
-<section class="container-mine homePageWhatSection" id="container-tablet-WhatWeDo">
-
-    <h1 class=" homePageWhatH1">WHAT WE DO</h1>
-
-    {% if whatWeDo %}
-    {%for post in whatWeDo%}
-    <div class="homePageWhatRow">
-        <a href="{{post.get_absolute_url}}"><img class="homePageWhatImage" src="{{post.image.url}}"></a>
-        <p class="homePageWhatHeaderText ">
-                <a style="list-style-type: none; text-decoration: none; color: black;" href="{{post.get_absolute_url}}">
-                     {{post.title}}
-                </a>
-               
-            </p>
-        </div>
-    {%endfor%}
-    {%endif%}
-
-    <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
-
-
-    <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs">
-
-
-        <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
-    
-        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
-    
         </section>
-
-     
-</section>
-
+    
+    <!--======================================================== WHAT WE DO SECTION ======================================================== -->
+    <section class="container-mine homePageWhatSection" id="container-tablet-WhatWeDo">
+        <h1 class=" homePageWhatH1">WHAT WE DO</h1>
+        {% if whatWeDo %}
+        {%for post in whatWeDo%}
+        <div class="homePageWhatRow">
+            <a href="{{post.get_absolute_url}}"><img class="homePageWhatImage" src="{{post.image.url}}"></a>
+            <p class="homePageWhatHeaderText ">
+                    <a style="list-style-type: none; text-decoration: none; color: black;" href="{{post.get_absolute_url}}">
+                         {{post.title}}
+                    </a>
+                </p>
+            </div>
+        {%endfor%}
+        {%endif%}
+    
+      <!--======================================================== WANT TO CONTRIBUTE SECTION ======================================================== -->
+    
+        <h1 style="padding-top: -10vh !important;" class=" homePageWhatH1">CONTRIBUTE</h1>
+    
+        <div class="homePageWhatRow">
+            <a href="#"><img class="homePageWhatImage" src="{% static 'images/DARA.png'%}"></a>
+            <p class="homePageWhatHeaderText ">
+                    <a style="list-style-type: none; text-decoration: none; color: black;" href="#">
+                         Want to contribute to our repetoire of posts? Come on along!
+                    </a>
+                </p>
+            </div> 
+        
       
-      
-      <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
-      <section style="display:none;" class="container homePageNeedReachUs">
-      
-      
-          <h1 class="homePageNeedReachUsH1">WHAT WE DO</h1>
-      
-          <p class="homePageNeedReachUsEmail">Email: <span class="homePageNeedReachUsAddress"> HolinessSingles.com</span></p>
-      
-          </section>
-      
-      
-      
-          <!--======================================================== NEWSLETTER ======================================================== -->
-      
-          <section class=" homePageNewsLetterSection mb-5">
-      
-              <div class="homePageNewsLetterBackground">
-                  <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
-                  <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
-                  <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
-      
-      
-              </div>
-      
-      
-          </section>
-      
-      
-      </div>
-      
-      </div>
-      
-      
-      {% endblock content %}
-      
-
-
-
-
+    
+    
+        <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
+        <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs homePageNeedReachUsMobile">
+            <h1 class="homePageNeedReachUsH1 homePageNeedReachUsH1Mobile">NEED TO REACH US?</h1>
+            <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            </section>
+    </section>
+    
+      <!--======================================================== WANT TO CONTRIBUTE SECTION ======================================================== -->
+    
+      <!-- <section  style="padding-top: -40px !important;" class="container-mine homePageWhatSection whantContributeOriginal" id="container-tablet-WhatWeDo">
+        <h1 style="padding-top: -10vh !important;" class=" homePageWhatH1">CONTRIBUTE</h1>
+        
+        <div class="homePageWhatRow">
+            <a href="#"><img class="homePageWhatImage" src="{% static 'images/DARA.png'%}"></a>
+            <p class="homePageWhatHeaderText pt-3">
+                    <a style="list-style-type: none; text-decoration: none; color: black;" href="#">
+                         Want to contribute to our repetoire of posts? Come on along!
+                    </a>
+                </p>
+            </div> 
+        
+        
+    </section> -->
+    
+        <!--======================================================== NEWSLETTER ======================================================== -->
+        <section class=" homePageNewsLetterSection mt-3 mb-5">
+            <div class="homePageNewsLetterBackground">
+                <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
+                <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
+                <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
+            </div>
+        </section>
+    
+    
+    
+         
+    
+           <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
+           <section id="reachUsWhatSectionOriginal"  style="display:none;" class=" homePageNeedReachUs">
+            <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
+            <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+            </section>
+            
+    </div>
+    
+    </div>
+    
+    
+    
+    
+    {% endblock content %}
 
 
 
